feat: Add Google Tag Manager integration using `@next/third-parties` library.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "dependencies": {
+    "@next/third-parties": "^16.0.5",
     "canvas-confetti": "^1.9.4",
     "lucide-react": "^0.554.0",
     "next": "15.2.5",
